--- a/cross-validation.Rmd
+++ b/cross-validation.Rmd
@@ -22,15 +22,18 @@ n_knots <- 30
 
 # Load Testate Data and R code - Full Data
 ```{r readData, echo=FALSE, include=FALSE, eval=TRUE, results='hide'}
-raw_data <- read.csv(file="~/testate/data/North American Raw Testate - Paleon 2017-Sheet1.csv", 
-                     skip=6)
+#raw_data <- read.csv(file="~/testate/data/North American Raw Testate - Paleon 2017-Sheet1.csv", 
+ #                    skip=6)
 
+raw_data <- read.csv(file="~/Documents/connoR/testate/data/North American Raw Testate - Paleon 2017-Sheet1.csv", 
+                     skip=6)
 y <- raw_data[, 12:85]
 X <- raw_data$WTD..cm.
 
 ## join species
 
-source("~/testate/data/join-testate.R")
+#source("~/testate/data/join-testate.R")
+source("~/Documents/connoR/testate/data/join-testate.R")
 
 ## remove zeros
 no_obs <- which(apply(y, 2, sum) == 0)
@@ -85,7 +88,8 @@ ggplot(testatePlotData, aes(x=Wetness, y=Count, color=species, group=species)) +
 ```{r}
 ## 10 fold cv
 if (file.exists("~/Google Drive/mvgp-test/cv-idx.RData")) {
-  load("~/Google Drive/mvgp-test/cv-idx.RData")
+  #load("~/Google Drive/mvgp-test/cv-idx.RData")
+  load("./mvgp-test/cv-idx.RData")
 } else {
   sample_idx <- sample(1:N, replace=FALSE)
   save(sample_idx, file="~/Google Drive/mvgp-test/cv-idx.RData")
@@ -110,7 +114,8 @@ params <- list(n_adapt=5000, n_mcmc=10000, n_thin=20,
                multiplicative_correlation=FALSE, 
                message=100, n_chains=4, n_cores=4, df=8)
 
-save_directory <- "~/Google Drive/mvgp-test/"
+#save_directory <- "~/Google Drive/mvgp-test/"
+save_directory <- "./mvgp-test/"
 save_file <- paste0("mvgp-dm-testate-bspline-", 1:10, ".RData")
 progress_directory <- "./mvgp-test/"
 progress_file <- paste0("mvgp-dm-testate-bspline-", 1:10, ".txt")
@@ -441,10 +446,20 @@ segments(x0=X[sample_idx], y0=apply(X_pred_bummer, 2, quantile, prob=0.025),
 abline(a=0, b=1, col="red")
 abline(lm(apply(X_pred_bummer, 2, mean) ~ X[sample_idx]), col="blue")
 summary(lm(apply(X_pred_bummer, 2, mean) ~ X[sample_idx]))
+
+
+dev.copy(pdf, "cv-plot1.pdf", width=10,height=10)
+
+
 ```
 
 
-  
+```{r}
+
+
+
+```
+
 
 
 
